@@ -1,6 +1,7 @@
 Revision history for Text::Template
 
 {{$NEXT}}
+    - Add test for nested tags breakage that happened in v1.46
 
 1.50  2018-02-10
   *** Revert support for identical start/end delimiters (e.g.: @@foo@@, XXfooXX)
